--- a/student.html
+++ b/student.html
@@ -10,16 +10,21 @@
             margin: 0;
             padding: 0;
         }
-        body{
-            background-color: rgb(26, 23, 23);
+
+        body {
+            background-image: url("360_F_651446718_ZIHGEFxdN1ZSP2hVmtembHIpShrOUo3e.jpg");
+            background-repeat: no-repeat;
+            background-size: 100vw 100vh;
         }
 
         header {
             position: sticky;
             top: 0;
-            background-image:linear-gradient(rgba(43, 41, 41, 0.767),rgb(125, 94, 94));
+            background-color: rgba(3, 122, 122, 0.829);
             border-radius: 60px;
+            backdrop-filter: blur(10px); /* Adjust the blur value as needed */
         }
+
         nav ul {
             display: flex;
             gap: 20px;
@@ -27,10 +32,11 @@
             padding: 10px;
         }
 
-        nav ul li a{
+        nav ul li a {
             text-decoration: none;
             color: black;
         }
+
         nav ul li {
             list-style: none;
             justify-content: center;
