--- a/student.html
+++ b/student.html
@@ -5,45 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Helper</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-image: url("360_F_651446718_ZIHGEFxdN1ZSP2hVmtembHIpShrOUo3e.jpg");
-            background-repeat: no-repeat;
-            background-size: 100vw 100vh;
-        }
-
-        header {
-            position: sticky;
-            top: 0;
-            background-color: rgba(3, 122, 122, 0.829);
-            border-radius: 60px;
-            backdrop-filter: blur(10px); /* Adjust the blur value as needed */
-        }
-
-        nav ul {
-            display: flex;
-            gap: 20px;
-            justify-content: space-around;
-            padding: 10px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: black;
-        }
-
-        nav ul li {
-            list-style: none;
-            justify-content: center;
-            align-items: center;
-            display: flex;
-        }
-    </style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -51,7 +13,7 @@
         <nav>
             <ul>
                 <div class="logo">
-                    <img width=60px src="logo.png" alt="">
+                    <img  src="test_talk.png" alt="">
                 </div>
                 <li><a href="/demo.docx">Home</a> </li>
                 <li><a href="/demo.docx">Academics</a> </li>
@@ -64,6 +26,23 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="home">
+            <div class="b1 b"><h1>Introduction of Website......</h1></div>
+            <div class="b2 b">
+                <div class="Signup"><b>Signup</b></div>
+                <div>
+                    <label for="username">User Name</label>
+                     <input type="text" id="username" placeholder="User name">
+                 </div>
+                 <div>
+                     <label for="email">Email</label>
+                     <input type="text" id="email" placeholder="Email">
+                </div>
+                <div class="butn"><button>Login</button></div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
