--- a/student.html
+++ b/student.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Helper</title>
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav>
+            <div class="logo">
+                <img  src="test_talk.png" alt="">
+            </div>
             <ul>
-                <div class="logo">
-                    <img  src="test_talk.png" alt="">
-                </div>
                 <li><a href="/demo.docx">Home</a> </li>
-                <li><a href="/demo.docx">Academics</a> </li>
-                <li><a href="/demo.docx">Career Guidance</a> </li>
-                <li><a href="/demo.docx">Financial Planning</a> </li>
+                <li><a href="/demo.docx">Career Path</a> </li>
                 <li><a href="/demo.docx">Mental Health</a> </li>
                 <li><a href="/demo.docx">Resources</a> </li>
                 <li><a href="/demo.docx">About Us</a></li>
