--- a/home.html
+++ b/home.html
@@ -18,12 +18,12 @@
                 <img  src="test_talk.png" alt="">
             </div>
             <ul>
-                <li><a href="/demo.docx">Home</a> </li>
-                <li><a href="/demo.docx">Career Path</a> </li>
-                <li><a href="/demo.docx">Mental Health</a> </li>
-                <li><a href="/demo.docx">Resources</a> </li>
-                <li><a href="/demo.docx">About Us</a></li>
-                <li><a href="/demo.docx">Contact</a> </li>
+                <li><a href="home.html">Home</a> </li>
+                <li><a href="career_path.html">Career Path</a> </li>
+                <li><a href="student.html">Mental Health</a> </li>
+                <li><a href="student.html">Resources</a> </li>
+                <li><a href="student.html">About Us</a></li>
+                <li><a href="student.html">Contact</a> </li>
             </ul>
         </nav>
     </header>
@@ -40,7 +40,7 @@
                      <label for="email">Email</label>
                      <input type="text" id="email" placeholder="Email">
                 </div>
-                <div class="butn"><button>Login</button></div>
+                <div class="butn"><button><b>Login</b></button></div>
             </div>
         </div>
     </main>
