--- a/career_path.html
+++ b/career_path.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Path</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
@@ -20,18 +20,18 @@
             <ul>
                 <li><a href="home.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
-                <li><a href="student.html">Mental Health</a> </li>
-                <li><a href="student.html">Resources</a> </li>
-                <li><a href="student.html">About Us</a></li>
-                <li><a href="student.html">Contact</a> </li>
+                <li><a href="home.html">Mental Health</a> </li>
+                <li><a href="home.html">Resources</a> </li>
+                <li><a href="home.html">About Us</a></li>
+                <li><a href="home.html">Contact</a> </li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="home">
-            <div class="b1 b"></div>
-            <div class="b2 b"></div>
-            <div class="b3 b"></div>
+            <div class="b1 b"><a href="">What After 10th</a></div>
+            <div class="b2 b"><a href="">What After 12th</a></div>
+            <div class="b3 b"><a href="">What After Graduation</a></div>
         </div>
     </main>
 </body>
