--- a/home.html
+++ b/home.html
@@ -20,10 +20,10 @@
             <ul>
                 <li><a href="home.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
-                <li><a href="student.html">Mental Health</a> </li>
-                <li><a href="student.html">Resources</a> </li>
-                <li><a href="student.html">About Us</a></li>
-                <li><a href="student.html">Contact</a> </li>
+                <li><a href="home.html">Mental Health</a> </li>
+                <li><a href="home.html">Resources</a> </li>
+                <li><a href="home.html">About Us</a></li>
+                <li><a href="home.html">Contact</a> </li>
             </ul>
         </nav>
     </header>
