--- a/home.html
+++ b/home.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Helper</title>
-<link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img  src="test_talk.png" alt="">
+                <img src="test_talk.png" alt="">
             </div>
             <ul>
                 <li><a href="home.html">Home</a> </li>
@@ -29,16 +29,18 @@
     </header>
     <main>
         <div class="home">
-            <div class="b1 b"><h1>Introduction of Website......</h1></div>
+            <div class="b1 b">
+                <h1>Introduction of Website......</h1>
+            </div>
             <div class="b2 b">
                 <div class="Signup"><b>Signup</b></div>
                 <div>
                     <label for="username">User Name</label>
-                     <input type="text" id="username" placeholder="User name">
-                 </div>
-                 <div>
-                     <label for="email">Email</label>
-                     <input type="text" id="email" placeholder="Email">
+                    <input type="text" id="username" placeholder="User name">
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="text" id="email" placeholder="Email">
                 </div>
                 <div class="butn"><button><b>Login</b></button></div>
             </div>
