--- a/10th.html
+++ b/10th.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Path After 10th</title>
     <link rel="stylesheet" href="10th.css">
 </head>
+
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img  src="test_talk.png" alt="">
+                <img src="test_talk.png" alt="">
             </div>
             <ul>
                 <li><a href="home.html">Login</a> </li>
@@ -24,22 +26,22 @@
     </header>
     <main>
 
-    <div class="main">
-        <h3>Career Path After 10th</h3>
-        <div class="sci">
-            <h4><li>Career Options After 10th in Science stream</li></h4>
-            <div class="descri">
+        <div class="main">
+            <h3>Career Path After 10th</h3>
+            <div class="cards">
+                <div class="sci card">
+                    <div>Career Options After 10th in <b>Science stream</b></div>
+                    <!-- <div class="descri">
                 <li>Medical (Allopathy and other traditional medicine streams) and allied sciences</li>
                 <li>Pure Science - Physics, Chemistry, etc</li>
                 <li>Agriculture and allied streams</li>
                 <li>Biotechnology</li>
-            </div>
+            </div> -->
 
-        </div>
-
-        <div class="com">
-            <h4><li>Career Options After 10th in Commerce stream</li></h4>
-            <div class="descri">
+                </div>
+                <div class="com card">
+                    <div>Career Options After 10th in <b>Commerce stream</b></div>
+                    <!-- <div class="descri">
                 <li>Commerce</li>
                 <li>Management</li>
                 <li>CA (Chartered Accountants)</li>
@@ -49,13 +51,13 @@
                 <li>International Business Management</li>
                 <li>Operation Management</li>
                 
-            </div>
+            </div> -->
 
-        </div>
+                </div>
 
-        <div class="art">
-            <h4><li>Career Options After 10th in Arts</li></h4>
-            <div class="descri">
+                <div class="art card">
+                    <div>Career Options After 10th in <b>Arts</b></div>
+                    <!-- <div class="descri">
                <li>Arts/ Humanities</li>
                <li>Other Professional Courses</li>
                <li>Law Courses</li>
@@ -68,11 +70,13 @@
                <li>Interior Designing</li>
                <li>Hotal Management & Catering</li>
                <li>Mass Communications</li>
-                
+                 -->
+                </div>
             </div>
 
         </div>
-    </div>
+        </div>
     </main>
 </body>
+
 </html>
