menu nav bar and bg

--- a/10th.html
+++ b/10th.html
@@ -31,50 +31,50 @@
             <div class="cards">
                 <div class="sci card">
                     <div>Career Options After 10th in <b>Science stream</b></div>
-                    <!-- <div class="descri">
-                <li>Medical (Allopathy and other traditional medicine streams) and allied sciences</li>
-                <li>Pure Science - Physics, Chemistry, etc</li>
-                <li>Agriculture and allied streams</li>
-                <li>Biotechnology</li>
-            </div> -->
+                    <div class="descri">
+                        <li>Medical (Allopathy and other traditional medicine streams) and allied sciences</li>
+                        <li>Pure Science - Physics, Chemistry, etc</li>
+                        <li>Agriculture and allied streams</li>
+                        <li>Biotechnology</li>
+                    </div>
 
                 </div>
                 <div class="com card">
                     <div>Career Options After 10th in <b>Commerce stream</b></div>
-                    <!-- <div class="descri">
-                <li>Commerce</li>
-                <li>Management</li>
-                <li>CA (Chartered Accountants)</li>
-                <li>Marketing Management</li>
-                <li>CS (Company Secretaries)</li>
-                <li>Finance Managemant</li>
-                <li>International Business Management</li>
-                <li>Operation Management</li>
-                
-            </div> -->
+                    <div class="descri">
+                        <li>Commerce</li>
+                        <li>Management</li>
+                        <li>CA (Chartered Accountants)</li>
+                        <li>Marketing Management</li>
+                        <li>CS (Company Secretaries)</li>
+                        <li>Finance Managemant</li>
+                        <li>International Business Management</li>
+                        <li>Operation Management</li>
+
+                    </div>
 
                 </div>
 
                 <div class="art card">
                     <div>Career Options After 10th in <b>Arts</b></div>
-                    <!-- <div class="descri">
-               <li>Arts/ Humanities</li>
-               <li>Other Professional Courses</li>
-               <li>Law Courses</li>
-               <li>Photography</li>
-               <li>Animation & Multimedia</li>
-               <li>Animation</li>
-               <li>Fashion Technology</li>
-               <li>Fine Arts</li>
-               <li>Aviation & Hospitality Management</li>
-               <li>Interior Designing</li>
-               <li>Hotal Management & Catering</li>
-               <li>Mass Communications</li>
-                 -->
-                </div>
-            </div>
+                    <div class="descri">
+                        <li>Arts/ Humanities</li>
+                        <li>Other Professional Courses</li>
+                        <li>Law Courses</li>
+                        <li>Photography</li>
+                        <li>Animation & Multimedia</li>
+                        <li>Animation</li>
+                        <li>Fashion Technology</li>
+                        <li>Fine Arts</li>
+                        <li>Aviation & Hospitality Management</li>
+                        <li>Interior Designing</li>
+                        <li>Hotal Management & Catering</li>
+                        <li>Mass Communications</li>
 
-        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </main>
 </body>
