--- a/home.html
+++ b/home.html
@@ -17,7 +17,26 @@
             <div class="logo">
                 <img src="test_talk.png" alt="">
             </div>
-            <ul>
+            <div class="menu">
+				<input type="checkbox" id="menu-toggle">
+				<label for="menu-toggle" class="menu-button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+						width="50" height="50" color="#ffffff" fill="none">
+						<path d="M4 5L20 5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+							stroke-linejoin="round" />
+						<path d="M4 12L20 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+							stroke-linejoin="round" />
+						<path d="M4 19L20 19" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+							stroke-linejoin="round" />
+					</svg></label>
+				<div class="dropdown">
+					<li><a href="home.html">Home</a> </li>
+                <li><a href="career_path.html">Career Path</a> </li>
+                <li><a href="home.html">Mental Health</a> </li>
+                <li><a href="home.html">Resources</a> </li>
+                <li><a href="home.html">About Us</a></li>
+				</div>
+			</div>
+            <ul class="none">
                 <li><a href="home.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
                 <li><a href="home.html">Mental Health</a> </li>
@@ -27,6 +46,7 @@
         </nav>
     </header>
     <main>
+        <img src="bgimg.jpg" alt="" class="bg">
         <div class="home">
             <div class="b1 b">
                 <h1>Introduction of Website......</h1>
