tejas design added

--- a/10th.html
+++ b/10th.html
@@ -9,31 +9,53 @@
 </head>
 
 <body>
+    <img src="accets/bgimg.jpg" alt="" class="bg">
     <header>
         <nav>
             <div class="logo">
-                <img src="test_talk.png" alt="">
+                <img src="accets/empowerU.png" height="140px" style="margin: -40px 0;">
+            </div>
+            <div class="menu">
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="menu-button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                        width="50" height="50" color="#ffffff" fill="none">
+                        <path d="M4 5L20 5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path d="M4 12L20 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path d="M4 19L20 19" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg></label>
+                <div class="dropdown">
+                    <li><a href="EmpowerU.html">Login</a> </li>
+                    <li><a href="EmpowerU.html">Home</a> </li>
+                    <li><a href="career_path.html">Career Path</a> </li>
+                    <li><a href="EmpowerU.html">Mental Health</a> </li>
+                    <li><a href="EmpowerU.html">Resources</a> </li>
+                    <li><a href="EmpowerU.html">About Us</a></li>
+                </div>
             </div>
             <ul>
-                <li><a href="home.html">Login</a> </li>
-                <li><a href="home.html">Home</a> </li>
+                <li><a href="EmpowerU.html">Login</a> </li>
+                <li><a href="EmpowerU.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
-                <li><a href="home.html">Mental Health</a> </li>
-                <li><a href="home.html">Resources</a> </li>
-                <li><a href="home.html">About Us</a></li>
+                <li><a href="EmpowerU.html">Mental Health</a> </li>
+                <li><a href="EmpowerU.html">Resources</a> </li>
+                <li><a href="EmpowerU.html">About Us</a></li>
             </ul>
         </nav>
     </header>
     <main>
 
         <div class="main">
+           
             <h3>Career Path After 10th</h3>
             <div class="cards">
                 <div class="sci card">
                     <div>Career Options After 10th in <b>Science stream</b></div>
                     <div class="descri">
                         <li>Medical (Allopathy and other traditional medicine streams) and allied sciences</li>
-                        <li>Pure Science - Physics, Chemistry, etc</li>
+                        <li>Pure Science - Physics, Chemistry,Mathematics,Biology <b>(PCM)/(PCB)/(PCMB)</b></li>
                         <li>Agriculture and allied streams</li>
                         <li>Biotechnology</li>
                     </div>
@@ -56,7 +78,7 @@
                 </div>
 
                 <div class="art card">
-                    <div>Career Options After 10th in <b>Arts</b></div>
+                    <div>Career Options After 10th in <span style="display: block;"><b>Arts</b></span></div>
                     <div class="descri">
                         <li>Arts/ Humanities</li>
                         <li>Other Professional Courses</li>
@@ -72,6 +94,26 @@
                         <li>Mass Communications</li>
 
                     </div>
+                </div>
+                <div class="iti card">
+                    <div>Career Options After 10th in <span style="display: block;"><b>ITI</b></span></div>
+                    <div class="descri">
+                        <li> Computer Hardware & Network Maintenance</li>
+                        <li> Draftsman (Civil)</li>
+                        <li> Electrician</li>
+                        <li> Electronic Mechanic</li>
+                        <li> Mechanic (Refrigeration and Air-Conditioner)</li>
+                        <li> Mechanic (Auto Electricals & Electronics)</li>
+                        <li> Mechanic (Mechatronics)</li>
+                        <li> Mechanic (Medical Electronics)</li>
+                        <li> Surveyor</li>
+                        <li> Radiology Technician</li>
+
+                    </div>
+                </div>
+                <div class="diploma card">
+                    <div><a href="diploma.html">Career Options After 10th in <span style="display: block;"><b>Diploma</b></span></a></div>
+                   
                 </div>
 
             </div>
