--- a/diploma.html
+++ b/diploma.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Path</title>
-    <link rel="stylesheet" href="career_styles.css">
+    <link rel="stylesheet" href="deploma.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="accets/empowerU.png"  height="140px" style="margin: -40px 0;"alt="">
+                <img src="accets/empowerU.png" height="140px" style="margin: -40px 0;" alt="">
             </div>
             <div class="menu">
                 <input type="checkbox" id="menu-toggle">
@@ -48,11 +48,34 @@
         </nav>
     </header>
     <main>
-        
-        <div class="home">
-            <div class="b1 b"><a href="10th.html">What After 10th</a></div>
-            <div class="b2 b"><a href="12th.html">What After 12th</a></div>
-            <div class="b3 b"><a href="">What After Graduation</a></div>
+    <div class="deploma"><span>Career Options After 10th in <b>Diploma</b></span></div>
+                   
+        <div class="descri">
+            <li>Diploma in Architectural Assistantship</li>
+            <li>Diploma in Automobile Engineering</li>
+            <li>Diploma in Chemical Engineering</li>
+            <li>Diploma in Civil Engineering</li>
+            <li>Diploma in Computer engineering</li>
+            <li>Diploma in Computer Science and Engineering</li>
+            <li>Diploma in Electrical Engineering</li>
+            <li>Diploma in Electronics and Telecommunication Engineering</li>
+            <li>Diploma in Fashion Design</li>
+            <li>Diploma in Food Technology</li>
+            <li>Diploma in Garment Technology</li>
+            <li>Diploma in Information Technology</li>
+            <li>Diploma in Instrumentation Technology</li>
+            <li>Diploma in Interior Design and Decoration</li>
+            <li>Diploma in Leather Technology</li>
+            <li>Diploma in Library and Information Sciences</li>
+            <li>Diploma in Mechanical Engineering</li>
+            <li>Diploma in Marine Engineering</li>
+            <li>Diploma in Medical Laboratory Technology</li>
+            <li>Diploma in Plastic Technology</li>
+            <li>Diploma in Production and Industrial Engineering</li>
+            <li>Diploma in Textile Design</li>
+            <li>Diploma in Textile Processing</li>
+            <li>Diploma in Textile Technology (Spinning)</li>
+
         </div>
     </main>
 </body>
