--- a/EmpowerU.html
+++ b/EmpowerU.html
@@ -3,37 +3,19 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Empover U </title>
+	<title>Empower U </title>
 	<link rel="stylesheet" href="style copy.css">
+	<link rel="shortcut icon" href="accets/f2.png" />
 </head>
 
 <body>
 
 	<div class="header">
-		<nav>
-			<img src="accets/empowerU.png" class="logo">
-
-			<ul class="nav-links">
-				<li><a href="EmpowerU.html">Home</a> </li>
-				<li><a href="career_path.html">Career Path</a> </li>
-				<li><a href="EmpowerU.html">Mental Health</a> </li>
-				<li><a href="EmpowerU.html">Resources</a> </li>
-				<li><a href="EmpowerU.html">About Us</a></li>
-			</ul>
-			<a href="signup.html">
-				<div class="signin">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff"
-						fill="white">
-						<path
-							d="M6.57757 15.4816C5.1628 16.324 1.45336 18.0441 3.71266 20.1966C4.81631 21.248 6.04549 22 7.59087 22H16.4091C17.9545 22 19.1837 21.248 20.2873 20.1966C22.5466 18.0441 18.8372 16.324 17.4224 15.4816C14.1048 13.5061 9.89519 13.5061 6.57757 15.4816Z"
-							stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-						<path
-							d="M16.5 6.5C16.5 8.98528 14.4853 11 12 11C9.51472 11 7.5 8.98528 7.5 6.5C7.5 4.01472 9.51472 2 12 2C14.4853 2 16.5 4.01472 16.5 6.5Z"
-							stroke="white" stroke-width="1.5" />
-					</svg>
-					<button>Sign In</button>
+		<header>
+			<nav>
+				<div class="logo">
+					<img src="accets/empowerU.png" alt="">
 				</div>
-
 				<div class="menu">
 					<input type="checkbox" id="menu-toggle">
 					<label for="menu-toggle" class="menu-button"><svg xmlns="http://www.w3.org/2000/svg"
@@ -46,6 +28,7 @@
 								stroke-linejoin="round" />
 						</svg></label>
 					<div class="dropdown">
+						<li><a href="signup.html">Login</a> </li>
 						<li><a href="EmpowerU.html">Home</a> </li>
 						<li><a href="career_path.html">Career Path</a> </li>
 						<li><a href="EmpowerU.html">Mental Health</a> </li>
@@ -53,9 +36,21 @@
 						<li><a href="EmpowerU.html">About Us</a></li>
 					</div>
 				</div>
+				<ul>
 
+					<li><a href="EmpowerU.html">Home</a> </li>
+					<li><a href="career_path.html">Career Path</a> </li>
+					<li><a href="EmpowerU.html">Mental Health</a> </li>
+					<li><a href="EmpowerU.html">Resources</a> </li>
+					<li><a href="EmpowerU.html">About Us</a></li>
+					<li><a href="signup.html">Login</a> </li>
+					<li><a style="background-image: linear-gradient(to right, #6a11cb, #2575fc);" href="signup.html">Signup</a> </li>
 
-		</nav>
+				</ul>
+			</nav>
+		</header>
+		</header>
+
 		<div class="header-content">
 			<div>Empower Your Learning Journey.</div>
 			<div class="pionts">
@@ -65,19 +60,18 @@
 					<li>Succeed</li>
 				</ul>
 			</div>
-			<!-- <form class="email-signup">
-				<input type="email" placeholder="Email address" required> <button type="submit">Get Started</button>
-
-			</form> -->
+			<div class="quiz"><button> <a href="quiz.html">Start ASSESSMENT</a></button></div>
 		</div>
-
 	</div>
+
+
+
 	<div class="pg2">
 		<div class="nav2">
 			<ul>
-				<li><a href="">Inspiration</a></li>
-				<li><a href="">Career Option</a></li>
-				<li><a href="">Financial Planning</a></li>
+				<li><a class="ins" href="EmpowerU.html">Inspiration</a></li>
+				<li><a href="career_path.html">Career Option</a></li>
+				<li><a href="EmpowerU.html">Financial Planning</a></li>
 			</ul>
 		</div>
 		<div class="imgs">
@@ -88,6 +82,42 @@
 			<div class="img5 img0"><img src="accets/img5.jpeg" alt=""></div>
 			<div class="img6 img0"><img src="accets/img6.jpeg" alt=""></div>
 		</div>
+	</div>
+
+	<div class="pg3">
+		<h1>Choose Your Path</h1>
+		<H3>Unlock your Potentail <br>NOW</H3>
+		<div class="cards">
+			<div class="crd1 crd">
+				<img width="200px" src="accets/empowerU.png" alt="">
+				<h2>Choose Your Path </h2>
+				<div><img src="accets/svg.svg" alt="">Academic Support</div>
+				<div><img src="accets/svg.svg" alt="">Career Guidance</div>
+				<div><img src="accets/svg.svg" alt="">Mental Health</div>
+				<div><img src="accets/svg.svg" alt="">Financial Planning</div>
+				<button>SELECT</button>
+
+
+			</div>
+			<div class="crd2 crd"><img width="200px" src="accets/empowerU.png" alt="">
+				<h2>Choose Your Path </h2>
+				<div><img src="accets/svg.svg" alt="">Skill Development</div>
+				<div><img src="accets/svg.svg" alt="">Exam Preparation</div>
+				<div><img src="accets/svg.svg" alt="">Extracurriculars</div>
+				<button>SELECT</button>
+
+			</div>
+			<div class="crd3 crd"><img width="200px" src="accets/empowerU.png" alt="">
+				<h2>Choose Your Path </h2>
+				<div><img src="accets/svg.svg" alt="">First-Year Guide</div>
+				<div><img src="accets/svg.svg" alt="">Final Year Success</div>
+				<div><img src="accets/svg.svg" alt="">Personal Growth</div>
+				<button>SELECT</button>
+			</div>
+		</div>
+	</div>
+	</div>
+
 	</div>
 
 </body>
