--- a/career_path.html
+++ b/career_path.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Path</title>
     <link rel="stylesheet" href="career_styles.css">
+    <link rel="shortcut icon" href="accets/f2.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="accets/empowerU.png"  height="140px" style="margin: -40px 0;"alt="">
+                <img src="accets/empowerU.png">
             </div>
             <div class="menu">
                 <input type="checkbox" id="menu-toggle">
@@ -52,7 +53,7 @@
         <div class="home">
             <div class="b1 b"><a href="10th.html">What After 10th</a></div>
             <div class="b2 b"><a href="12th.html">What After 12th</a></div>
-            <div class="b3 b"><a href="">What After Graduation</a></div>
+            <div class="b3 b"><a href="gradution.html">What After Graduation</a></div>
         </div>
     </main>
 </body>
