--- a/gradution.html
+++ b/gradution.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Path</title>
-    <link rel="stylesheet" href="deploma.css">
+    <link rel="stylesheet" href="gradution.css
+    ">
+    <link rel="shortcut icon" href="accets/f2.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
@@ -16,7 +18,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="accets/empowerU.png" height="140px" style="margin: -40px 0;" alt="">
+                <img src="accets/empowerU.png">
             </div>
             <div class="menu">
                 <input type="checkbox" id="menu-toggle">
@@ -38,7 +40,7 @@
                 </div>
             </div>
             <ul>
-                <li><a href="EmpowerU.html">Login</a> </li>
+                <li><a href="signup.html">Login</a> </li>
                 <li><a href="EmpowerU.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
                 <li><a href="EmpowerU.html">Mental Health</a> </li>
@@ -48,35 +50,7 @@
         </nav>
     </header>
     <main>
-    <div class="deploma"><span>Career Options After 10th in <b>Diploma</b></span></div>
-                   
-        <div class="descri">
-            <li>Diploma in Architectural Assistantship</li>
-            <li>Diploma in Automobile Engineering</li>
-            <li>Diploma in Chemical Engineering</li>
-            <li>Diploma in Civil Engineering</li>
-            <li>Diploma in Computer engineering</li>
-            <li>Diploma in Computer Science and Engineering</li>
-            <li>Diploma in Electrical Engineering</li>
-            <li>Diploma in Electronics and Telecommunication Engineering</li>
-            <li>Diploma in Fashion Design</li>
-            <li>Diploma in Food Technology</li>
-            <li>Diploma in Garment Technology</li>
-            <li>Diploma in Information Technology</li>
-            <li>Diploma in Instrumentation Technology</li>
-            <li>Diploma in Interior Design and Decoration</li>
-            <li>Diploma in Leather Technology</li>
-            <li>Diploma in Library and Information Sciences</li>
-            <li>Diploma in Mechanical Engineering</li>
-            <li>Diploma in Marine Engineering</li>
-            <li>Diploma in Medical Laboratory Technology</li>
-            <li>Diploma in Plastic Technology</li>
-            <li>Diploma in Production and Industrial Engineering</li>
-            <li>Diploma in Textile Design</li>
-            <li>Diploma in Textile Processing</li>
-            <li>Diploma in Textile Technology (Spinning)</li>
-
-        </div>
+        
     </main>
 </body>
 
