--- a/10th.html
+++ b/10th.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Path After 10th</title>
     <link rel="stylesheet" href="10th.css">
+    <link rel="shortcut icon" href="accets/f2.png" />
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="accets/empowerU.png" height="140px" style="margin: -40px 0;">
+                <img src="accets/empowerU.png">
             </div>
             <div class="menu">
                 <input type="checkbox" id="menu-toggle">
@@ -46,79 +47,129 @@
         </nav>
     </header>
     <main>
-
-        <div class="main">
-           
-            <h3>Career Path After 10th</h3>
-            <div class="cards">
-                <div class="sci card">
-                    <div>Career Options After 10th in <b>Science stream</b></div>
-                    <div class="descri">
-                        <li>Medical (Allopathy and other traditional medicine streams) and allied sciences</li>
-                        <li>Pure Science - Physics, Chemistry,Mathematics,Biology <b>(PCM)/(PCB)/(PCMB)</b></li>
-                        <li>Agriculture and allied streams</li>
-                        <li>Biotechnology</li>
-                    </div>
-
+        <h3 class="heding">Career Path After 10th</h3>
+        <div class="crds">
+            <div class="card 1">
+                <h1>1. Career Options After 10th in Science stream <br>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                </h1>
+                <div class="descri">
+                    <li>Medical (Allopathy and other traditional medicine streams) and allied sciences</li>
+                    <li>Pure Science - Physics, Chemistry,Mathematics,Biology (PCM)/(PCB)/(PCMB)</li>
+                    <li>Agriculture and allied streams</li>
+                    <li>Biotechnology</li>
                 </div>
-                <div class="com card">
-                    <div>Career Options After 10th in <b>Commerce stream</b></div>
-                    <div class="descri">
-                        <li>Commerce</li>
-                        <li>Management</li>
-                        <li>CA (Chartered Accountants)</li>
-                        <li>Marketing Management</li>
-                        <li>CS (Company Secretaries)</li>
-                        <li>Finance Managemant</li>
-                        <li>International Business Management</li>
-                        <li>Operation Management</li>
-
-                    </div>
-
-                </div>
-
-                <div class="art card">
-                    <div>Career Options After 10th in <span style="display: block;"><b>Arts</b></span></div>
-                    <div class="descri">
-                        <li>Arts/ Humanities</li>
-                        <li>Other Professional Courses</li>
-                        <li>Law Courses</li>
-                        <li>Photography</li>
-                        <li>Animation & Multimedia</li>
-                        <li>Animation</li>
-                        <li>Fashion Technology</li>
-                        <li>Fine Arts</li>
-                        <li>Aviation & Hospitality Management</li>
-                        <li>Interior Designing</li>
-                        <li>Hotal Management & Catering</li>
-                        <li>Mass Communications</li>
-
-                    </div>
-                </div>
-                <div class="iti card">
-                    <div>Career Options After 10th in <span style="display: block;"><b>ITI</b></span></div>
-                    <div class="descri">
-                        <li> Computer Hardware & Network Maintenance</li>
-                        <li> Draftsman (Civil)</li>
-                        <li> Electrician</li>
-                        <li> Electronic Mechanic</li>
-                        <li> Mechanic (Refrigeration and Air-Conditioner)</li>
-                        <li> Mechanic (Auto Electricals & Electronics)</li>
-                        <li> Mechanic (Mechatronics)</li>
-                        <li> Mechanic (Medical Electronics)</li>
-                        <li> Surveyor</li>
-                        <li> Radiology Technician</li>
-
-                    </div>
-                </div>
-                <div class="diploma card">
-                    <div><a href="diploma.html">Career Options After 10th in <span style="display: block;"><b>Diploma</b></span></a></div>
-                   
-                </div>
-
             </div>
+            <div class="card 2">
+                <h1>2. Career Options After 10th in Commerce stream
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                </h1>
+                <div class="descri">
+                    <li>Commerce</li>
+                    <li>Management</li>
+                    <li>CA (Chartered Accountants)</li>
+                    <li>Marketing Management</li>
+                    <li>CS (Company Secretaries)</li>
+                    <li>Finance Managemant</li>
+                    <li>International Business Management</li>
+                    <li>Operation Management</li>
+                </div>
+            </div>
+            <div class="card 3">
+                <h1>3. Career Options After 10th in Arts <br>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        class="injected-svg" data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                        <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                    </svg>
+                </h1>
+                <div class="descri">
+                    <li>Arts/ Humanities</li>
+                    <li>Other Professional Courses</li>
+                    <li>Law Courses</li>
+                    <li>Photography</li>
+                    <li>Animation & Multimedia</li>
+                    <li>Animation</li>
+                    <li>Fashion Technology</li>
+                    <li>Fine Arts</li>
+                    <li>Aviation & Hospitality Management</li>
+                    <li>Interior Designing</li>
+                    <li>Hotal Management & Catering</li>
+                    <li>Mass Communications</li>
+                </div>
+            </div>
+            <div class="card 4">
+                <h1>4. Career Options After 10th in ITI <br>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        class="injected-svg" data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                        <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                    </svg>
+                </h1>
+                <div class="descri">
+                    <li> Computer Hardware & Network Maintenance</li>
+                    <li> Draftsman (Civil)</li>
+                    <li> Electrician</li>
+                    <li> Electronic Mechanic</li>
+                    <li> Mechanic (Refrigeration and Air-Conditioner)</li>
+                    <li> Mechanic (Auto Electricals & Electronics)</li>
+                    <li> Mechanic (Mechatronics)</li>
+                    <li> Mechanic (Medical Electronics)</li>
+                    <li> Surveyor</li>
+                    <li> Radiology Technician</li>
+                </div>
+            </div>
+
+
+            <div class="card 5">
+                <h1>5. Career Options After 10th in Diploma <br>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        class="injected-svg" data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                        <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                    </svg>
+                </h1>
+                <div class="descri">
+                    <li>Diploma in Architectural Assistantship</li>
+                    <li>Diploma in Automobile Engineering</li>
+                    <li>Diploma in Chemical Engineering</li>
+                    <li>Diploma in Civil Engineering</li>
+                    <li>Diploma in Computer engineering</li>
+                    <li>Diploma in Computer Science and Engineering</li>
+                    <li>Diploma in Electrical Engineering</li>
+                    <li>Diploma in Electronics and Telecommunication Engineering</li>
+                    <li>Diploma in Fashion Design</li>
+                    <li>Diploma in Food Technology</li>
+                    <li>Diploma in Garment Technology</li>
+                    <li>Diploma in Information Technology</li>
+                    <li>Diploma in Instrumentation Technology</li>
+                    <li>Diploma in Interior Design and Decoration</li>
+                    <li>Diploma in Leather Technology</li>
+                    <li>Diploma in Library and Information Sciences</li>
+                    <li>Diploma in Mechanical Engineering</li>
+                    <li>Diploma in Marine Engineering</li>
+                    <li>Diploma in Medical Laboratory Technology</li>
+                    <li>Diploma in Plastic Technology</li>
+                    <li>Diploma in Production and Industrial Engineering</li>
+                    <li>Diploma in Textile Design</li>
+                    <li>Diploma in Textile Processing</li>
+                    <li>Diploma in Textile Technology (Spinning)</li>
+                </div>
+            </div>
+
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
