--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signin</title>
+    <link rel="shortcut icon" href="accets/f2.png" />
     <link rel="stylesheet" href="signup.css">
 </head>
 
